gac_sb/objects/AppCIRchecklistItemResponse__c.object
<CustomObject>
    <description>APPLICATION CIR - La réponse d&apos;un consultant à un élément de checklist (pour savoir si il a coché l&apos;élément et pour y stocker son éventuel commentaire)</description>
    <fields>
        <fullName>ApprovalComment__c</fullName>
        <label>Commentaire Approbation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Checked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Effectué</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChecklistItem__c</fullName>
        <label>Element de Checklist</label>
        <referenceTo>AppCIRchecklistItem__c</referenceTo>
        <relationshipName>ChecklistItemResponses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Commentaire</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mission__c</fullName>
        <label>Mission</label>
        <referenceTo>AppCIRmission__c</referenceTo>
        <relationshipName>ChecklistItemResponses</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>[OLD] Réponse à un élément de Checklist</label>
    <nameField>
        <displayFormat>ChecklistResponse-{000000}</displayFormat>
        <label>Nom de réponse à un élément de Checklist</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Réponses à un élément de Checklist</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>